[metadata]
name = unpaddedbase64
version = 1.1.0
description = Unpadded Base64
long_description = file: README.rst
keywords = base64
url = https://github.com/matrix-org/python-unpaddedbase64
project_urls =
    Issue Tracker = https://github.com/matrix-org/python-unpaddedbase64/issues
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
py_modules = unpaddedbase64
python_requires = >=3.6
